--- a/src/main/resources/templates/partials/subnav.html
+++ b/src/main/resources/templates/partials/subnav.html
@@ -21,7 +21,7 @@
                 {{#loginUser}}
                 <form id="logoutForm" method="post" action="/user/logout" style="display: none;"></form>
                 <li><a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">로그아웃</a></li>
-                <li><a href="/users/{{userId}}/form" role="button">개인정보수정</a></li>
+                <li><a href="/users/{{userId}}/update-form" role="button">개인정보수정</a></li>
                 {{/loginUser}}
 
                 <!--
@@ -29,7 +29,7 @@
                 <li><a href="#registerModal" role="button" data-toggle="modal">회원가입</a></li>
                 -->
                 {{^loginUser}}
-                <li><a href="/user/form" role="button">회원가입</a></li>
+                <li><a href="/user/signup-form" role="button">회원가입</a></li>
                 <li><a href="/user/login" role="button">로그인</a></li>
                 {{/loginUser}}
             </ul>
