--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,9 +16,12 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       </div>
       <div class="d-flex">
-        <a class="btn btn-primary" th:href="@{/users/loginForm}">로그인</a>
-        <a class="btn" th:href="@{/users/form}">회원가입</a>
-        <a class="btn" th:href="@{/article/write}">글 작성</a>
+        <a class="btn btn-primary" th:unless="${session.loginUser}" th:href="@{/users/loginForm}">로그인</a>
+        <a class="btn" th:unless="${session.loginUser}" th:href="@{/users/form}">회원가입</a>
+        <form th:if="${session.loginUser}" action="/users/logout" method="post">
+          <button class="btn btn-primary" type="submit" >로그아웃</button>
+        </form>
+        <a class="btn" th:if="${session.loginUser}"th:href="@{/users/{id}/form(id=${session.loginUser.id})}">개인정보수정</a>
       </div>
     </div>
   </nav>
