--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -9,6 +9,16 @@
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        window.onload = function() {
+            let alertMessage = /*[[${alertMessage}]]*/ null;
+            if (alertMessage) {
+                alert(alertMessage);
+            }
+        };
+        /*]]>*/
+    </script>
 </head>
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
@@ -20,6 +30,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="../js/scripts.js"></script>
-    </th:block>
+</th:block>
 </body>
 </html>
